[package]
name = "nih_plug_bevy"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["xtask", "demo"]

description = "An adapter to use BEVY GUIs with NIH-plug"

[features]
default = ["opengl"]

opengl = ["bevy_baseview/opengl"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "dfafe90349aa3d8e40922ec031b6d673803d6432", default-features = false }
bevy_baseview = { path = "../bevy_baseview_plugin"}
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2" }
bevy = { version = "0.14" }

crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "thin"
strip = "symbols"
debug = false
debug-assertions = false

[profile.dev]
lto = "thin"
strip = "symbols"
debug = false
debug-assertions = false